2008-08-05  Peter Johanson  <peter@peterjohanson.com>

	* UseCorrectCasingRule.cs: The casing rule does not apply
	to add_ and remove_ methods generated by the compiler for
	private events.

2008-07-10  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Start using ../common.make

2008-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* ParameterNamesShouldMatchOverridenMethodRule.cs: Handle the case
	where Resolve returns null (cannot find the required assemblies)
	* Makefile.am: Rebuild if the framework has changed.

2008-05-11  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotPrefixEventsWithAfterOrBeforeRule.cs: New. Rule to check
	if event names starts with either After of Before prefixes.

2008-05-02  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectSuffixRule.cs: Use TryGetValue to avoid access to the 
	Dictionary. Refactor textual report outside the CheckType (it's 
	larger) and avoid reporting twice the first item.

2008-04-26  Nestor Salceda  <nestor.salceda@gmail.com>

	* ParameterNamesShouldMatchOverridenMethodRule.cs:  Remove a duplicated
	call to ReturnType.  

2008-04-26  Jb Evain  <jbevain@novell.com>

	* UseCorrectCasingRule.cs: check for proper namespace casing.
	Rules are as follows: if the namespace length is 1, we
	report an error, if it's 2, we check that all letters
	are properly cased, if it's 3, we check that all letters
	are not upper cased, and that we're pascal case otherwise.

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectSuffixRule.cs: Allow the Set suffix for collections.

2008-03-19  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectSuffixRule.cs: Fix case where generics are used (since
	it affects the suffix of the type). Fix bug #372250

2008-03-16  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectCasingRule.cs: Ignore generated code. VS SWF designer
	can generate properties with bad cases (e.g. for resources).

2008-03-15  Sebastien Pouliot  <sebastien@ximian.com>
