@@ -39,8 +39,8 @@ using Gendarme.Framework.Rocks;
 
 namespace Gendarme.Rules.Naming {
 
-	[Problem ("This identifier violates .NET naming conventions.")]
-	[Solution ("Make all type and method names pascal-cased (like MyClass), and all parameter names must be camel-cased (like myParameter).")]
+	[Problem ("This identifier (namespace, type or method) violates the .NET naming conventions.")]
+	[Solution ("Make all namespace, type and method names pascal-cased (like MyClass), and all parameter names must be camel-cased (like myParameter).")]
 	public class UseCorrectCasingRule : Rule, ITypeRule, IMethodRule {
 
 		HashSet<string> namespaces = new HashSet<string> ();
@@ -129,18 +129,11 @@ namespace Gendarme.Rules.Naming {
 							"In namespaces made of two characters, every character have to be upper cased. Rename namespace {0}", ns));
 
 					break;
-				case 3:
-					// if the sub namespace is made of 3 chars, make sure they're not all uppercase
+				default:
+					// if the sub namespace is made of 3 or more chars, make sure they're not all uppercase
 					if (!IsPascalCase (ns) || ns.All (c => Char.IsLetter (c) && Char.IsUpper (c)))
 						ReportCasingError (type, string.Format (
 							"Namespaces made of three characters have to be pascal cased. Rename namespace {0}", ns));
-
-					break;
-				default:
-					// sub namespaces have to be pascal cased
-					if (!IsPascalCase (ns))
-						ReportCasingError (type, string.Format (
-							"Namespace should be pascal cased. Rename namespace {0}", ns));
 
 					break;
 				}
@@ -151,10 +144,6 @@ namespace Gendarme.Rules.Naming {
 		{
 			// rule does not apply to generated code (outside developer's control)
 			if (type.IsGeneratedCode ())
-				return RuleResult.DoesNotApply;
-
-			// <Module> isn't tagged as generated by the compiler but still must be ignored
-			if (type.Name == Constants.ModuleType)
 				return RuleResult.DoesNotApply;
 
 			// ok, rule applies, check namespace first
@@ -168,6 +157,9 @@ namespace Gendarme.Rules.Naming {
 			return Runner.CurrentRuleResult;
 		}
 
+		static MethodSemanticsAttributes mask = MethodSemanticsAttributes.Getter | MethodSemanticsAttributes.Setter |
+			MethodSemanticsAttributes.AddOn | MethodSemanticsAttributes.RemoveOn;
+
 		public RuleResult CheckMethod (MethodDefinition method)
 		{
 			// ignore constructors (.ctor or .cctor) and compiler/tool-generated code
@@ -175,21 +167,17 @@ namespace Gendarme.Rules.Naming {
 				return RuleResult.DoesNotApply;
 
 			// don't consider private compiler generated add / remove on events
-			if ((method.IsAddOn || method.IsRemoveOn) &&
-			    (method.ImplAttributes & MethodImplAttributes.Synchronized) != 0 &&
-			    method.IsPrivate)
+			if ((method.IsAddOn || method.IsRemoveOn) && method.IsSynchronized && method.IsPrivate)
 				return RuleResult.DoesNotApply;
 
 			string name = method.Name;
 			MethodSemanticsAttributes attrs = method.SemanticsAttributes;
-			MethodSemanticsAttributes mask = MethodSemanticsAttributes.Getter | MethodSemanticsAttributes.Setter
-				| MethodSemanticsAttributes.AddOn | MethodSemanticsAttributes.RemoveOn;
 			if ((attrs & mask) != 0) {
 				// it's something special
 				int underscore = method.Name.IndexOf ('_');
 				if (underscore != -1)
 					name = name.Substring (underscore + 1);
-			} else if (method.IsSpecialName || method.IsGeneratedCode ()) {
+			} else if (method.IsSpecialName) {
 				return RuleResult.Success;
 			}
 
